# mango.extra

./: .gitignore  README.md
code/: mango_compress_lzo.cpp
code/qoitest/: CMakeLists.txt  compile.sh  qoi.h  qoitest.cpp
code/qoitest/source/: qoitest.cpp
code/ziptest/: CMakeLists.txt
code/ziptest/source/: ziptest.cpp
